minor changes to index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
-<h1>File Upload</h1>
-
+<h1>Profile Pic Upload</h1>
+<p>Share your amazing self with the world...</p>
 <form action="/" method="POST" enctype="multipart/form-data">
     <input type="file" name="inputFile">
     <input type="submit" class="btn btn-primary">
